--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,7 +146,7 @@ dependencies {
     implementation project(path: ':com-google-firebase-messaging')
 
     //Sockets
-    implementation project(":kotlinrxsocket-1.0.0")
+    implementation project(":kotlinrxsocketsclient-release")
     implementation('io.socket:socket.io-client:0.9.0') {
         // excluding org.json which is provided by Android
         exclude group: 'org.json', module: 'json'
