[testit] Release notes #2

--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,7 @@ captures/
 
 # IntelliJ
 *.iml
-.idea/
-.idea/codeStyles/
+.idea
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
