--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@
     <application
             android:name=".SmartHomeApplication"
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@mipmap/launcher"
             android:label="@string/app_name"
             android:usesCleartextTraffic="true"
-            android:roundIcon="@mipmap/ic_launcher_round"
+            android:roundIcon="@mipmap/launcher_round"
             android:theme="@style/AppTheme"
             tools:replace="android:icon">
 
