--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,8 @@ android {
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
 
-        buildConfigField("String", 'HOST_LINK', '\"http://192.168.88.88\"')
+        buildConfigField("String", 'HOST_LINK_GLOBAL', '\"http://91.235.70.73\"')
+        buildConfigField("String", 'HOST_LINK_LOCAL', '\"http://192.168.88.88\"')
         buildConfigField("String", 'PORT_API', '\":8080/\"')
         buildConfigField("String", 'PORT_SOCKET', '\"9092\"')
         manifestPlaceholders = [fabric_token: FABRIC_TOKEN]
