--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,6 +67,11 @@
                 android:screenOrientation="sensorPortrait"
                 android:theme="@style/ThemeMainTranslucentToolbar"/>
 
+        <activity
+            android:name=".presentation.camera.CameraActivity"
+            android:screenOrientation="sensorLandscape"
+            android:theme="@style/ThemeMainTranslucentToolbar"/>
+
         <!-- Service -->
         <!-- Firebase Notifications -->
         <service android:name=".data.network.service.firebase.SmartHomeFirebaseMessagingService">
