--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,6 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
-        maven { url 'https://maven.fabric.io/public' }
-    }
-
-    dependencies {
-        classpath 'io.fabric.tools:gradle:1.28.1'
     }
 }
 
@@ -14,13 +9,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'io.fabric'
 
 repositories {
     jcenter()
     mavenCentral()
     google()
-    maven { url 'https://maven.fabric.io/public' }
     maven { url "https://jitpack.io" }
 }
 
@@ -38,12 +31,12 @@ ext {
 def CONFIG = { k -> "\"${project.properties.get(k)}\"" }
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     buildToolsVersion "28.0.3"
     defaultConfig {
         applicationId "com.chernysh.smarthome"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "0.0.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -57,7 +50,6 @@ android {
         buildConfigField("String", 'PORT_SOCKET', '\"9092\"')
         buildConfigField("String", 'RTSP_URL', CONFIG("SMART_HOME_RTSP"))
         buildConfigField("String", 'PIN', CONFIG("PIN"))
-        manifestPlaceholders = [fabric_token: FABRIC_TOKEN]
     }
     buildTypes {
         release {
@@ -95,6 +87,9 @@ android {
         sourceCompatibility 1.8
         targetCompatibility 1.8
     }
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
 }
 
 dependencies {
@@ -102,11 +97,6 @@ dependencies {
 
     // Kotlin
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
-    //Fabric
-    implementation('com.crashlytics.sdk.android:crashlytics:2.9.8@aar') {
-        transitive = true;
-    }
 
     //MVI
     implementation 'com.hannesdorfmann.mosby3:mvi:3.1.1'
@@ -121,6 +111,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.core:core-ktx:1.3.2'
 
     //Networking
     implementation 'com.google.code.gson:gson:2.8.6'
@@ -173,6 +164,7 @@ dependencies {
     // View
     //implementation 'com.github.Triggertrap:SeekArc:v1.1'
     implementation 'com.balysv:material-ripple:1.0.2'
+    implementation 'com.github.itcherry:TimeRangePicker:1.0'
 
     // Video
     implementation 'de.mrmaffen:libvlc-android:2.1.12@aar'
