--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,10 @@ repositories {
 
 ext {
     support_version = '28.0.0'
-    retrofit_version = '2.3.0'
+    retrofit_version = '2.9.0'
     rxBindingKotlinVersion = '2.2.0'
     dagger_version = '2.15'
-    glide_version = "4.10.0"
+    glide_version = "4.11.0"
     firebase_version = "11.2.0"
     constraintLayoutVersion = '1.1.3'
     leakCanaryVersion = '1.6.3'
@@ -102,15 +102,15 @@ dependencies {
     implementation 'com.hannesdorfmann.mosby3:mvi:3.1.1'
 
     //Security
-    implementation 'androidx.biometric:biometric:1.0.1'
+    implementation 'androidx.biometric:biometric:1.1.0'
 
     //Android
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.core:core-ktx:1.3.2'
 
     //Networking
@@ -118,11 +118,11 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
     implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.3m'
 
     //RxJava
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.16'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.20'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:$rxBindingKotlinVersion"
     implementation "com.jakewharton.rxbinding2:rxbinding-support-v4-kotlin:$rxBindingKotlinVersion"
@@ -135,7 +135,7 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
 
     //Glide
-    implementation "com.github.bumptech.glide:glide:$glide_version"
+    implementation "com.github.bumptech.glide:glide:4.11.0"
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
     //Firebase
@@ -156,8 +156,6 @@ dependencies {
     debugImplementation 'com.readystatesoftware.chuck:library:1.1.0'
     implementation 'com.tspoon.traceur:traceur:1.0.1'
     releaseImplementation 'com.readystatesoftware.chuck:library-no-op:1.1.0'
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanaryVersion"
-    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanaryVersion"
     debugImplementation 'com.readystatesoftware.chuck:library:1.1.0'
     releaseImplementation 'com.readystatesoftware.chuck:library-no-op:1.1.0'
 
