--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,49 +1,38 @@
-buildscript {
-    repositories {
-        jcenter()
-        mavenCentral()
-        maven { url 'https://maven.fabric.io/public' }
-    }
-
-    dependencies {
-        classpath 'io.fabric.tools:gradle:1.28.1'
-    }
+plugins {
+    id 'com.android.application'
+    id 'com.google.gms.google-services'
+    id 'kotlin-kapt'
+    id 'kotlin-android'
 }
 
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'io.fabric'
-
 repositories {
-    jcenter()
     mavenCentral()
     google()
-    maven { url 'https://maven.fabric.io/public' }
     maven { url "https://jitpack.io" }
 }
 
 ext {
     support_version = '28.0.0'
-    retrofit_version = '2.3.0'
+    retrofit_version = '2.9.0'
     rxBindingKotlinVersion = '2.2.0'
     dagger_version = '2.15'
     glide_version = "4.10.0"
-    firebase_version = "11.2.0"
+    firebase_version = "16.0.4"
     constraintLayoutVersion = '1.1.3'
-    leakCanaryVersion = '1.6.3'
+    leakCanaryVersion = '2.12'
 }
 
 def CONFIG = { k -> "\"${project.properties.get(k)}\"" }
 
+android.buildFeatures.buildConfig true
+
 android {
-    compileSdkVersion 28
-    buildToolsVersion "28.0.3"
+    compileSdkVersion 34
+    namespace "com.chernysh.smarthome"
     defaultConfig {
         applicationId "com.chernysh.smarthome"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 34
         versionCode 1
         versionName "0.0.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -51,13 +40,15 @@ android {
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
 
-        buildConfigField("String", 'HOST_LINK_GLOBAL', '\"http://91.235.70.73\"')
-        buildConfigField("String", 'HOST_LINK_LOCAL', '\"http://192.168.88.88\"')
+        buildConfigField("String", 'HOST_LINK_GLOBAL', '\"http://95.67.92.25\"')
+        buildConfigField("String", 'HOST_LINK_LOCAL', '\"http://192.168.88.253\"')
         buildConfigField("String", 'PORT_API', '\":8080/\"')
         buildConfigField("String", 'PORT_SOCKET', '\"9092\"')
         buildConfigField("String", 'RTSP_URL', CONFIG("SMART_HOME_RTSP"))
         buildConfigField("String", 'PIN', CONFIG("PIN"))
-        manifestPlaceholders = [fabric_token: FABRIC_TOKEN]
+    }
+    viewBinding {
+        enabled = true
     }
     buildTypes {
         release {
@@ -91,9 +82,13 @@ android {
         preDexLibraries = false
         javaMaxHeapSize "4g"
     }
-    compileOptions {
-        sourceCompatibility 1.8
-        targetCompatibility 1.8
+    kotlin {
+        jvmToolchain(17)
+    }
+    java {
+        toolchain {
+            languageVersion.set(JavaLanguageVersion.of(17))
+        }
     }
 }
 
@@ -101,29 +96,24 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // Kotlin
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
-    //Fabric
-    implementation('com.crashlytics.sdk.android:crashlytics:2.9.8@aar') {
-        transitive = true;
-    }
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     //MVI
     implementation 'com.hannesdorfmann.mosby3:mvi:3.1.1'
 
     //Security
-    implementation 'androidx.biometric:biometric:1.0.1'
+    implementation 'androidx.biometric:biometric:1.1.0'
 
     //Android
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     //Networking
-    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
@@ -148,10 +138,7 @@ dependencies {
     annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
 
     //Firebase
-    implementation "com.google.firebase:firebase-auth:$firebase_version"
-    implementation "com.google.android.gms:play-services-auth:$firebase_version"
-    implementation "com.google.firebase:firebase-core:$firebase_version"
-    implementation project(path: ':com-google-firebase-messaging')
+    implementation "com.google.firebase:firebase-messaging:23.3.0"
 
     //Sockets
     implementation project(":kotlinrxsocketsclient-release")
@@ -162,20 +149,15 @@ dependencies {
 
     //Utils
     implementation 'com.jakewharton.timber:timber:4.7.1'
-    debugImplementation 'com.readystatesoftware.chuck:library:1.1.0'
     implementation 'com.tspoon.traceur:traceur:1.0.1'
-    releaseImplementation 'com.readystatesoftware.chuck:library-no-op:1.1.0'
     debugImplementation "com.squareup.leakcanary:leakcanary-android:$leakCanaryVersion"
     releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:$leakCanaryVersion"
-    debugImplementation 'com.readystatesoftware.chuck:library:1.1.0'
-    releaseImplementation 'com.readystatesoftware.chuck:library-no-op:1.1.0'
+    debugImplementation "com.github.chuckerteam.chucker:library:4.0.0"
+    releaseImplementation "com.github.chuckerteam.chucker:library-no-op:4.0.0"
 
     // View
-    //implementation 'com.github.Triggertrap:SeekArc:v1.1'
     implementation 'com.balysv:material-ripple:1.0.2'
 
     // Video
     implementation 'de.mrmaffen:libvlc-android:2.1.12@aar'
 }
-
-apply plugin: 'com.google.gms.google-services'
