--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,89 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        package="com.chernysh.smarthome"
-        tools:ignore="GoogleAppIndexingWarning">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.chernysh.smarthome"
+    tools:ignore="GoogleAppIndexingWarning">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
 
     <application
-            android:name=".SmartHomeApplication"
-            android:allowBackup="true"
-            android:icon="@mipmap/launcher"
-            android:label="@string/app_name"
-            android:usesCleartextTraffic="true"
-            android:roundIcon="@mipmap/launcher_round"
-            android:theme="@style/AppTheme"
-            tools:replace="android:icon">
+        android:name=".SmartHomeApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/launcher_round"
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
+        tools:replace="android:icon">
 
         <!-- Meta data -->
         <meta-data
-                android:name="android.max_aspect"
-                android:value="ratio_float"/>
+            android:name="android.max_aspect"
+            android:value="ratio_float" />
+
         <meta-data
-                android:name="io.fabric.ApiKey"
-                android:value="${fabric_token}"/>
-        <meta-data
-                android:name="preloaded_fonts"
-                android:resource="@array/preloaded_fonts" />
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
         <!-- Activities   -->
         <activity
-                android:name=".presentation.flat.FlatActivity"
-                android:screenOrientation="sensorPortrait"
-                android:theme="@style/ThemeMainTranslucentToolbar">
-        </activity>
+            android:name=".presentation.flat.FlatActivity"
+            android:screenOrientation="sensorPortrait"
+            android:theme="@style/ThemeMainTranslucentToolbar"></activity>
 
         <activity
-                android:name=".presentation.login.LoginActivity"
-                android:screenOrientation="sensorPortrait"
-                android:theme="@style/ThemeMainTranslucentToolbar">
+            android:name=".presentation.login.LoginActivity"
+            android:exported="true"
+            android:screenOrientation="sensorPortrait"
+            android:theme="@style/ThemeMainTranslucentToolbar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <activity
-                android:name=".presentation.bedroom.BedroomActivity"
-                android:screenOrientation="sensorPortrait"
-                android:theme="@style/ThemeMainTranslucentToolbar"/>
+            android:name=".presentation.bedroom.BedroomActivity"
+            android:screenOrientation="sensorPortrait"
+            android:theme="@style/ThemeMainTranslucentToolbar" />
 
         <activity
-                android:name=".presentation.corridor.CorridorActivity"
-                android:screenOrientation="sensorPortrait"
-                android:theme="@style/ThemeMainTranslucentToolbar"/>
+            android:name=".presentation.corridor.CorridorActivity"
+            android:screenOrientation="sensorPortrait"
+            android:theme="@style/ThemeMainTranslucentToolbar" />
 
         <activity
-                android:name=".presentation.kitchen.KitchenActivity"
-                android:screenOrientation="sensorPortrait"
-                android:theme="@style/ThemeMainTranslucentToolbar"/>
+            android:name=".presentation.kitchen.KitchenActivity"
+            android:screenOrientation="sensorPortrait"
+            android:theme="@style/ThemeMainTranslucentToolbar" />
 
         <activity
-                android:name=".presentation.living_room.LivingRoomActivity"
-                android:screenOrientation="sensorPortrait"
-                android:theme="@style/ThemeMainTranslucentToolbar"/>
+            android:name=".presentation.living_room.LivingRoomActivity"
+            android:screenOrientation="sensorPortrait"
+            android:theme="@style/ThemeMainTranslucentToolbar" />
 
         <activity
             android:name=".presentation.camera.CameraActivity"
             android:screenOrientation="sensorLandscape"
-            android:theme="@style/ThemeMainTranslucentToolbar"/>
+            android:theme="@style/ThemeMainTranslucentToolbar" />
 
         <!-- Service -->
         <!-- Firebase Notifications -->
-        <service android:name=".data.network.service.firebase.SmartHomeFirebaseMessagingService">
+        <service
+            android:name=".data.network.service.firebase.SmartHomeFirebaseMessagingService"
+            android:exported="false">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
-            </intent-filter>
-        </service>
-        <service android:name=".data.network.service.firebase.SmartHomeFirebaseInstanceIdService">
-            <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
 
